# nrf52_ws2815

./: .gitignore  CMakeLists.txt  Readme.md  bootstrap.sh  ozone_debug.jdebug
cmake/: toolchain.cmake
pcb/ws2815-driver-V1/: fp-lib-table  sym-lib-table  ws2815-driver  ws2815-driver-cache.lib  ws2815-driver-lib.dcm  ws2815-driver-lib.lib  ws2815-driver.kicad_pcb  ws2815-driver.kicad_pro  ws2815-driver.kicad_sch  ws2815-driver.pro  ws2815-driver.sch
pcb/ws2815-driver-V1/ws2815-driver.pretty/: 81-csBGA.kicad_mod  brightek_1.6x1.5_rgb_led.kicad_mod
scripts/: bootstrap_darwin.sh
src/: CMakeLists.txt  bsp_ws2815_driver.h  drv_ws2815.c  drv_ws2815.h  main.c  rgb_hsv.c  rgb_hsv.h
src/config/: sdk_config.h
src/effects/: effect.h  effect_blink.c  effect_blink.h  effect_breath.c  effect_breath.h  effect_fade_out.c  effect_fade_out.h  effect_flame.c  effect_flame.h  effect_larson_scanner.c  effect_rainbow_cycle.c  effect_rainbow_cycle.h  gamma.c  gamma.h
tests/: drv_ws2815_test.c
